# FDLS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FDLS_MATH.md
examples/: run_case5.py
src/: classical_solver.py  config.py  core.py  dc_opf.py  exporter.py  fdls.py  hhl_solver.py  ieee14_case.py  logger.py  main.py  math_utils.py  plots.py  qopf_smallcase_iter_test.py  qubo_solver.py  vqls_solver.py
src/fdls5bus/: __init__.py  cli.py  data.py  solver.py  ybus.py
src/outputs/: run_results.txt
src/outputs/matrices/: Bdouble_prime.csv  Bprime.csv  Ybus_imag.csv  Ybus_real.csv  matrix_info.txt  rhs_p_initial.csv
tests/: test_fdls_case5.py
